fix: bottom padding overlap

--- a/src/components/NoteCard/NoteCard.module.css
+++ b/src/components/NoteCard/NoteCard.module.css
@@ -8,7 +8,9 @@
 
 .noteTitle{
     font-size: 1.2rem;
-    
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .noteContainer:hover{
