--- a/src/routes/Notes/Notes.module.css
+++ b/src/routes/Notes/Notes.module.css
@@ -1,3 +1,3 @@
 .notePage{
-    padding: 1rem;
+    padding: 1rem 1rem 6rem 1rem;
 }
